--- a/css/blocks/promo.scss
+++ b/css/blocks/promo.scss
@@ -4,7 +4,7 @@
   background-size: cover;
   background-position: center center;
   position: relative;
-  .title {
+  &__title {
     color: $yellow;
   }
 }
