--- a/css/blocks/team.scss
+++ b/css/blocks/team.scss
@@ -7,6 +7,8 @@
 
   &__title {
     margin-top: 100px;
+    color: $yellow;
+    text-align: center;
   }
 
   &__container {
@@ -19,7 +21,7 @@
   }
   &__list{
     display: flex;
-    flex-direction: column;
     flex-wrap: nowrap;
+    flex-direction: column;
   }
 }  
