--- a/css/blocks/team.scss
+++ b/css/blocks/team.scss
@@ -6,16 +6,86 @@
   position: relative;
   
   &__container {
-  position: absolute;
-  width: 50%;
-  top: 0;
-  right: 0;
-  bottom: 0;
-  background: rgba(52, 55, 57, .8);
+    position: absolute;
+    width: 50%;
+    top: 0;
+    right: 0;
+    bottom: 0;
+    background: rgba(51, 53, 55, .8);
   }
-  &__list{
+  &__title {
+    color: $yellow;
     display: flex;
-    flex-wrap: nowrap;
-    flex-direction: column;
+    justify-content: center;
+    margin-top: 115px;
   }
+  &-acco {
+    display: flex;
+    justify-content: center;
+    &__item {
+      margin-top: 35px;
+    }
+    &__container {
+      margin-left: 100px;
+      &--active {
+        .team-acco__name_icon {
+        transform: rotate(180deg);
+        }
+        .team-acco__name_prof {
+          color: $yellow;
+        }
+        .team-acco__desc {
+          height: 100%;
+        }
+      }
+    }
+    &__name {
+      display: flex;
+      &_icon {
+      }
+      &_prof {
+        margin-left: 18px;
+        @include gagalin;
+        color: $white;
+        text-transform: uppercase;
+        font-size: 14px;
+      }
+    }
+    &__desc {
+      display: flex;
+      flex-direction: row;
+      justify-content: space-between;
+      height: 0;
+      overflow: hidden;
+      &_pic {
+        width: 132px;
+        max-width: 132px;
+        height: 100px;
+        max-height: 100px;
+        border-radius: 50%;
+        overflow: hidden;
+        object-fit: cover;
+        background-position: center center / no-repeat;
+        margin: 10px 15px;
+        &:after {
+          content: '';
+          display: block;
+          width: 100%;
+          padding-top: 100%;
+        }
+      }
+    }
+    &__title {
+      display: flex;
+      flex-direction: column;
+      color: $white;
+      @include ubuntu;
+      line-height: 1.7;
+      font-size: 14px;
+      &_desc {
+        margin-top: 10px;
+      }
+    }
+  }
+
 }  
