--- a/css/font/stylesheet.scss
+++ b/css/font/stylesheet.scss
@@ -47,7 +47,7 @@
 }
 
 @mixin gagalin() {
-	font-family: 'Gagalin-Regular', Helvetica, sans-serif;
+	font-family: 'Gagalin', Helvetica, sans-serif;
 }
 
 @mixin ubuntu($style: light) {
