--- a/css/blocks/burgermenu.scss
+++ b/css/blocks/burgermenu.scss
@@ -1,9 +1,9 @@
 .burger__menu {
   vertical-align: middle;
   position: relative;
-  height: 22px;
+  height: rem(22px);
   align-items: center;
-  margin-left: 30px;
+  margin-left: rem(30px);
   display: none;
 }
 
@@ -13,9 +13,9 @@
     &:before,
     &:after {
     background: #fff;
-    width: 24px;
-    height: 4px;
-    border-radius: 3px;
+    width: rem(24px);
+    height: rem(4px);
+    border-radius: rem(3px);
     }
 
     &:before,
