--- a/css/blocks/nav.scss
+++ b/css/blocks/nav.scss
@@ -9,16 +9,16 @@
   font-style: normal;
   display: flex;
   align-items: center;
-  margin-right: 15px;
+  margin-right: rem(15px);
 
     &:after {
       content: "";
-      width: 4px;
-      height: 4px;
+      width: rem(4px);
+      height: rem(4px);
       background-color: $white;
       border-radius: 50%;
       display: block;
-      margin-left: 15px;
+      margin-left: rem(15px);
     }
     &:nth-of-type(7):after {
         display: none;
@@ -28,6 +28,6 @@
 .nav__link {
   text-decoration: none;
   color: $white;
-  font-size: 13px;
+  font-size: rem(13px);
   text-transform: uppercase;
 }
