--- a/css/blocks/promo.scss
+++ b/css/blocks/promo.scss
@@ -12,32 +12,32 @@
   display: flex;
   align-items: center;
   &__title {
-  margin: 20px 15px;
+  margin: rem(20px) rem(15px);
   }
 }
 
 .promo__subtitle {
   @include life;
-  margin-top: 35px;
-  font-size: 56px;
+  margin-top: rem(35px);
+  font-size: rem(56px);
   color: $white;
   line-height: 1;
-  letter-spacing: 3px;
+  letter-spacing: rem(3px);
 }
 
 .promo__img {
-  margin: 0 0 60px 15px;
+  margin: 0 0 rem(60px) rem(15px);
 }
 
 .promo__scroll_btn {
-  width: 29px;
-  height: 15px;
+  width: rem(29px);
+  height: rem(15px);
   background-image: url("./my_page/img/pageheder/arrow-scroll.png");
   background-repeat: no-repeat;
   background-size: contain;
   display: block;
   position: absolute;
-  bottom: 30px;
+  bottom: rem(30px);
   left: 50%;
   transform: translateX(-50%);
 }
