--- a/css/layout/layout.scss
+++ b/css/layout/layout.scss
@@ -1,3 +1,9 @@
+html {
+  font-size: 16px;
+
+
+}
+
 body, 
 html {
  height: 100%;
@@ -12,7 +18,7 @@ html {
 }
 
 .container {
-  width: 940px;
+  width: 95%;
   margin: 0 auto;
 }
 
