--- a/main.css
+++ b/main.css
@@ -343,6 +343,9 @@ template {
   font-weight: 500;
   font-style: normal; }
 
+html {
+  font-size: 16px; }
+
 body,
 html {
   height: 100%;
@@ -356,7 +359,7 @@ html {
   padding: 0; }
 
 .container {
-  width: 940px;
+  width: 95%;
   margin: 0 auto; }
 
 .section {
@@ -445,22 +448,22 @@ p {
   -webkit-box-align: center;
   -ms-flex-align: center;
   align-items: center;
-  margin-right: 15px; }
+  margin-right: 0.9375rem; }
   .nav__item:after {
     content: "";
-    width: 4px;
-    height: 4px;
+    width: 0.25rem;
+    height: 0.25rem;
     background-color: #fff;
     border-radius: 50%;
     display: block;
-    margin-left: 15px; }
+    margin-left: 0.9375rem; }
   .nav__item:nth-of-type(7):after {
     display: none; }
 
 .nav__link {
   text-decoration: none;
   color: #fff;
-  font-size: 13px;
+  font-size: 0.8125rem;
   text-transform: uppercase; }
 
 .logo {
@@ -484,44 +487,44 @@ p {
   -ms-flex-align: center;
   align-items: center; }
   .promo__content__title {
-    margin: 20px 15px; }
+    margin: 1.25rem 0.9375rem; }
 
 .promo__subtitle {
   font-family: 'Lifehack', Helvetica, sans-serif;
-  margin-top: 35px;
-  font-size: 56px;
+  margin-top: 2.1875rem;
+  font-size: 3.5rem;
   color: #fff;
   line-height: 1;
-  letter-spacing: 3px; }
+  letter-spacing: 0.1875rem; }
 
 .promo__img {
-  margin: 0 0 60px 15px; }
+  margin: 0 0 3.75rem 0.9375rem; }
 
 .promo__scroll_btn {
-  width: 29px;
-  height: 15px;
+  width: 1.8125rem;
+  height: 0.9375rem;
   background-image: url("./my_page/img/pageheder/arrow-scroll.png");
   background-repeat: no-repeat;
   background-size: contain;
   display: block;
   position: absolute;
-  bottom: 30px;
+  bottom: 1.875rem;
   left: 50%;
   -webkit-transform: translateX(-50%);
   -ms-transform: translateX(-50%);
   transform: translateX(-50%); }
 
 .btn {
-  padding: 12px 15px;
+  padding: 0.75rem 0.9375rem;
   font-family: 'Ubuntu', Helvetica, sans-serif;
   font-weight: 300;
   font-weight: 500;
-  border-radius: 5px;
+  border-radius: 0.3125rem;
   background-color: #e35028;
   text-transform: uppercase;
   text-decoration: none;
   color: #fff;
-  font-size: 13px; }
+  font-size: 0.8125rem; }
   .btn:hover {
     background: #c1401e; }
 
@@ -539,9 +542,9 @@ p {
     -ms-flex-pack: center;
     justify-content: center;
     color: #2f3234;
-    letter-spacing: 4px;
-    margin-bottom: 40px;
-    letter-spacing: 0.5px; }
+    letter-spacing: 0.25rem;
+    margin-bottom: 2.5rem;
+    letter-spacing: 0rem 5px; }
   .best__list {
     display: -webkit-box;
     display: -ms-flexbox;
@@ -550,25 +553,25 @@ p {
     -ms-flex-align: baseline;
     align-items: baseline; }
   .best__img {
-    margin-bottom: 40px; }
+    margin-bottom: 2.5rem; }
   .best__item {
     text-align: center;
-    margin-bottom: 40px;
+    margin-bottom: 2.5rem;
     -ms-flex-preferred-size: 33.3%;
     flex-basis: 33.3%; }
   .best__subtitle {
     font-family: 'Lifehack', Helvetica, sans-serif;
-    font-size: 24px;
+    font-size: 1.5rem;
     font-weight: 500; }
   .best__text {
     text-align: center;
     font-family: 'Ubuntu', Helvetica, sans-serif;
     font-weight: 300;
-    font-size: 14px;
+    font-size: 0.875rem;
     font-weight: 300;
     line-height: 1.7;
     color: rgba(47, 50, 52, 0.8);
-    margin-top: 15px; }
+    margin-top: 0.9375rem; }
 
 .dark {
   background-image: url(./my_page/img/pageburg/bg.png);
@@ -598,7 +601,7 @@ p {
     -webkit-box-pack: center;
     -ms-flex-pack: center;
     justify-content: center;
-    margin-top: 115px; }
+    margin-top: 7.1875rem; }
   .team-acco {
     display: -webkit-box;
     display: -ms-flexbox;
@@ -607,9 +610,9 @@ p {
     -ms-flex-pack: center;
     justify-content: center; }
     .team-acco__item {
-      margin-top: 35px; }
+      margin-top: 2.1875rem; }
     .team-acco__container {
-      margin-left: 100px; }
+      margin-left: 6.25rem; }
       .team-acco__container--active .team-acco__name_icon {
         -webkit-transform: rotate(180deg);
         -ms-transform: rotate(180deg);
@@ -623,11 +626,11 @@ p {
       display: -ms-flexbox;
       display: flex; }
       .team-acco__name_prof {
-        margin-left: 18px;
+        margin-left: 1.125rem;
         font-family: 'Gagalin', Helvetica, sans-serif;
         color: #fff;
         text-transform: uppercase;
-        font-size: 14px; }
+        font-size: 0.875rem; }
     .team-acco__desc {
       display: -webkit-box;
       display: -ms-flexbox;
@@ -642,16 +645,16 @@ p {
       height: 0;
       overflow: hidden; }
       .team-acco__desc_pic {
-        width: 132px;
-        max-width: 132px;
-        height: 100px;
-        max-height: 100px;
+        width: 8.25rem;
+        max-width: 8.25rem;
+        height: 6.25rem;
+        max-height: 6.25rem;
         border-radius: 50%;
         overflow: hidden;
         -o-object-fit: cover;
         object-fit: cover;
         background-position: center center / no-repeat;
-        margin: 10px 15px; }
+        margin: 0.625rem 0.9375rem; }
         .team-acco__desc_pic:after {
           content: '';
           display: block;
@@ -669,9 +672,9 @@ p {
       font-family: 'Ubuntu', Helvetica, sans-serif;
       font-weight: 300;
       line-height: 1.7;
-      font-size: 14px; }
+      font-size: 0.875rem; }
       .team-acco__title_desc {
-        margin-top: 10px; }
+        margin-top: 0.625rem; }
 
 .menu {
   background-image: url(./my_page/img/pagemenu/bgmenu.png);
@@ -680,7 +683,7 @@ p {
   background-position: center center;
   position: relative; }
   .menu__title {
-    top: 110px;
+    top: 6.875rem;
     left: 94;
     position: absolute;
     color: #fff; }
@@ -702,15 +705,15 @@ p {
       .menu-acco__item--active .menu-acco__name {
         color: #f9b43b; }
       .menu-acco__item--active .menu-acco__content {
-        max-width: 540px;
-        padding: 62px 35px;
+        max-width: 33.75rem;
+        padding: 3.875rem 2.1875rem;
         visibility: visible;
         opacity: 1; }
     .menu-acco__name {
       position: relative;
-      width: 80px;
+      width: 5rem;
       font-family: 'Gagalin', Helvetica, sans-serif;
-      font-size: 40px;
+      font-size: 2.5rem;
       color: #fff;
       background-position: center center;
       background-repeat: no-repeat;
@@ -719,7 +722,7 @@ p {
       .menu-acco__name > span {
         white-space: nowrap;
         position: absolute;
-        left: 15px;
+        left: 0.9375rem;
         bottom: 0;
         right: 0;
         -webkit-transform: rotate(-90deg);
@@ -733,7 +736,7 @@ p {
     .menu-acco__content {
       background-color: rgba(47, 50, 52, 0.9);
       color: #fff;
-      font-size: 14px;
+      font-size: 0.875rem;
       font-family: 'Ubuntu', Helvetica, sans-serif;
       font-weight: 300;
       line-height: 1.7;
@@ -774,7 +777,7 @@ p {
   object-position: center; }
 
 .comment__name {
-  font-size: 14px;
+  font-size: 0.875rem;
   font-family: 'Gagalin', Helvetica, sans-serif;
   color: white;
   text-align: left; }
@@ -795,7 +798,7 @@ p {
   align-items: flex-start;
   font-family: 'Ubuntu', Helvetica, sans-serif;
   font-weight: 300;
-  font-size: 14px;
+  font-size: 0.875rem;
   opacity: 0;
   color: #fff;
   position: absolute;
@@ -805,7 +808,7 @@ p {
   right: 0;
   line-height: 1.714;
   background-color: rgba(47, 50, 52, 0.3);
-  padding: 50px 20px;
+  padding: 3.125rem 1.25rem;
   -webkit-transition: opacity .4s;
   -o-transition: opacity .4s;
   transition: opacity .4s; }
@@ -826,7 +829,7 @@ p {
   .form__title {
     text-align: center;
     color: #f9b43b;
-    margin-bottom: 50px; }
+    margin-bottom: 3.125rem; }
 
 .order__form {
   margin-left: -5%; }
@@ -837,46 +840,46 @@ p {
   margin-left: 5%; }
 
 .order__form-row {
-  margin-bottom: 16px;
+  margin-bottom: 1rem;
   display: -webkit-box;
   display: -ms-flexbox;
   display: flex; }
 
 .order__form-label {
-  margin-bottom: 17px;
+  margin-bottom: 1.0625rem;
   font-family: 'Ubuntu', Helvetica, sans-serif;
   font-weight: 300;
   color: #fff;
-  font-size: 14px; }
+  font-size: 0.875rem; }
 
 .order__form-input {
-  font-size: 14px;
-  padding: 10px;
-  padding: 5px 10px;
-  border: 1px solid transparent;
-  border-radius: 5px;
+  font-size: 0.875rem;
+  padding: 0.625rem;
+  padding: 0.3125rem 0.625rem;
+  border: 0.0625rem solid transparent;
+  border-radius: 0.3125rem;
   width: 100%; }
   .order__form-input:active {
-    border-radius: 1px solid #f9b43b; }
+    border-radius: 0.0625rem solid #f9b43b; }
 
 .order__form-block {
   display: block;
   width: 100%; }
 
 .order__form-row_double {
-  margin-left: -20px; }
+  margin-left: -1.25rem; }
   .order__form-row_double .order__form-block {
     width: calc(100% / 2 - 20px);
-    margin-left: 20px; }
+    margin-left: 1.25rem; }
 
 .order__form-row_quatro {
-  margin-left: -20px; }
+  margin-left: -1.25rem; }
   .order__form-row_quatro .order__form-block {
     width: calc(100% / 4 - 20px);
-    margin-left: 20px; }
+    margin-left: 1.25rem; }
 
 .order__form-input_textarea {
-  height: 110px;
+  height: 6.875rem;
   resize: none; }
 
 .order__radio {
@@ -889,18 +892,18 @@ p {
   -ms-flex-direction: row;
   flex-direction: row;
   white-space: nowrap;
-  margin-right: 20px;
+  margin-right: 1.25rem;
   vertical-align: middle;
   cursor: pointer; }
 
 .order__radio-elem {
   position: absolute;
   top: 0;
-  left: 00px; }
+  left: 0rem; }
 
 .order__radio-fake {
-  width: 16px;
-  height: 16px;
+  width: 1rem;
+  height: 1rem;
   border-radius: 50%;
   background: #fff;
   vertical-align: middle;
@@ -909,8 +912,8 @@ p {
     content: "";
     display: block;
     position: absolute;
-    width: 0px;
-    height: 0px;
+    width: 0rem;
+    height: 0rem;
     border-radius: 50%;
     background: #e35028;
     top: 50%;
@@ -923,17 +926,17 @@ p {
     transition: width .3s, height .3s; }
 
 .order__radio-elem:checked + .order__radio-fake:after {
-  width: 8px;
-  height: 8px; }
+  width: 0.5rem;
+  height: 0.5rem; }
 
 .order__radio-title {
   vertical-align: middle;
-  font-size: 14px;
+  font-size: 0.875rem;
   color: #fff;
-  margin-left: 10px; }
+  margin-left: 0.625rem; }
 
 .order__radio_checkbox .order__radio-fake {
-  border-radius: 0px; }
+  border-radius: 0rem; }
 
 .order__radio_checkbox .order__radio-elem + .order__radio-fake:after {
   background: transparent; }
@@ -941,35 +944,35 @@ p {
 .order__radio_checkbox .order__radio-elem:checked + .order__radio-fake:after {
   background: url("./my_page/svg/cheked.svg") 50% no-repeat transparent;
   background-size: cover;
-  width: 11px;
-  height: 9px; }
+  width: 0.6875rem;
+  height: 0.5625rem; }
 
 .btn {
   vertical-align: middle;
-  margin-right: 20px;
+  margin-right: 1.25rem;
   border: 0;
   background: #e35028;
-  font-size: 13px;
+  font-size: 0.8125rem;
   text-transform: uppercase;
-  border-radius: 5px;
+  border-radius: 0.3125rem;
   color: #fff;
   font-family: 'Ubuntu', Helvetica, sans-serif;
   font-weight: 300;
-  padding: 10px 15px;
+  padding: 0.625rem 0.9375rem;
   cursor: pointer; }
 
 .order__form-button_reset {
   vertical-align: middle;
-  margin-right: 20px;
+  margin-right: 1.25rem;
   border: 0;
   background: #e35028;
-  font-size: 13px;
+  font-size: 0.8125rem;
   text-transform: uppercase;
-  border-radius: 5px;
+  border-radius: 0.3125rem;
   color: #fff;
   font-family: 'Ubuntu', Helvetica, sans-serif;
   font-weight: 300;
-  padding: 10px 15px;
+  padding: 0.625rem 0.9375rem;
   cursor: pointer;
   padding-left: 0;
   padding-right: 0;
@@ -1016,16 +1019,16 @@ p {
     text-align: left;
     font-family: 'Ubuntu', Helvetica, sans-serif;
     font-weight: 300;
-    font-size: 14px;
+    font-size: 0.875rem;
     font-weight: 500;
     color: #fff;
-    padding: 10px 0; }
+    padding: 0.625rem 0; }
   .footer__text {
-    padding: 5px 0; }
+    padding: 0.3125rem 0; }
   .footer__phone_number {
     font-weight: bold;
     color: #e45028;
-    padding-left: 10px;
+    padding-left: 0.625rem;
     text-decoration: none; }
   .footer__social {
     display: -webkit-box;
@@ -1044,7 +1047,7 @@ p {
     display: flex;
     top: 50%; }
   .footer__social_icon {
-    margin-left: 20px;
+    margin-left: 1.25rem;
     opacity: .3;
     -webkit-transition: .3s;
     -o-transition: .3s;
@@ -1084,18 +1087,18 @@ p {
 .burger__menu {
   vertical-align: middle;
   position: relative;
-  height: 22px;
+  height: 1.375rem;
   -webkit-box-align: center;
   -ms-flex-align: center;
   align-items: center;
-  margin-left: 30px;
+  margin-left: 1.875rem;
   display: none; }
 
 .burger__menu__link, .burger__menu__link:before, .burger__menu__link:after {
   background: #fff;
-  width: 24px;
-  height: 4px;
-  border-radius: 3px; }
+  width: 1.5rem;
+  height: 0.25rem;
+  border-radius: 0.1875rem; }
 
 .burger__menu__link:before, .burger__menu__link:after {
   content: "";
