--- a/main.css
+++ b/main.css
@@ -412,7 +412,7 @@ p {
 .header {
   position: absolute;
   width: 100%;
-  padding-top: 12px;
+  padding-top: 0.75rem;
   z-index: 1; }
 
 .header__container {
@@ -467,8 +467,8 @@ p {
   text-transform: uppercase; }
 
 .logo {
-  width: 100px;
-  height: 80px; }
+  width: 6.25rem;
+  height: 5rem; }
 
 .promo {
   background-image: url(./my_page/img/pageheder/Rectangle.png);
@@ -1057,24 +1057,24 @@ p {
 
 .fix__menu {
   position: fixed;
-  top: 90px;
-  right: 35px;
+  top: 5.625rem;
+  right: 2.1875rem;
   z-index: 2; }
 
 .fix__menu__knob {
   display: block;
-  height: 18px;
-  width: 18px;
+  height: 1.125rem;
+  width: 1.125rem;
   border-radius: 50%;
-  border: 1px solid transparent;
-  margin-bottom: 3px;
+  border: 0.0625rem solid transparent;
+  margin-bottom: 0.1875rem;
   position: relative; }
   .fix__menu__knob--active {
     border-color: #fff; }
   .fix__menu__knob:before {
     content: '';
-    width: 6px;
-    height: 6px;
+    width: 0.375rem;
+    height: 0.375rem;
     background-color: #fff;
     border-radius: 50%;
     position: absolute;
